# sharjeel-web-automation

./: Dockerfile.build  README.md  app.py  automation.py  build.sh  main.py  practice print.numbers  practice print.xlsx  pyproject.toml  requirements.txt  state.json
.github/workflows/: build.yml
